[project]
name = "peft-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "gradio>=6.0.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "peft>=0.18.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
